# rust-postgresql-schema-upgrader

./: Cargo.toml  LICENSE  README.md
src/: async_upgrade.rs  blocking.rs  blocking_upgrade.rs  db_tracker.rs  error.rs  integrity.rs  lib.rs  options.rs  schema_loader.rs  tls.rs  upgrade_macros.rs
tests/: integration_tests.rs
tests/common/: mod.rs
tests/data/basic_flow_step2/: 000_init.sql  001_bar.sql
tests/data/concurrency/: 000_init.sql
tests/data/integrity_violation_step1/: 000_init.sql
tests/data/integrity_violation_step2/: 000_init.sql  001_next.sql
tests/data/mixed_concurrency/v1/: 000_init.sql
tests/data/mixed_concurrency/v2/: 001_feature.sql
tests/data/rollback/: 000_init.sql  001_fail.sql
tests/data/schema_auto_create/: 000_init.sql
tests/data/schema_support/: 000_init.sql
