[package]
name = "postgresql-schema-upgrader"
version = "0.1.0"
edition = "2024"

[dependencies]
postgres = { version = "0.19.12", optional = true }
tokio-postgres = { version = "0.7.15", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }

[features]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio"]
tls = ["dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots"]

[dev-dependencies]
tempfile = "3.10"
