[package]
name = "postgresql-schema-upgrader"
version = "0.1.2"
edition = "2024"
description = "A robust, safety-first library for managing PostgreSQL database schema migrations with both sync and async support."
repository = "https://github.com/mshamis85/rust-postgresql-schema-upgrader"
documentation = "https://docs.rs/postgresql-schema-upgrader"
homepage = "https://github.com/mshamis85/rust-postgresql-schema-upgrader"
license = "MIT"
keywords = ["postgres", "postgresql", "migration", "schema", "upgrader"]
categories = ["database"]
exclude = [
    "tests/**/*",
    ".gitignore",
    ".github/**/*"
]

[dependencies]
postgres = { version = "0.19.12", features = ["with-chrono-0_4"], optional = true }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.26", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
dotenvy = "0.15"

[features]
default = ["postgres", "tokio-postgres", "tls"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres", "dep:tokio"]
tls = ["dep:tokio-postgres-rustls", "dep:rustls", "dep:webpki-roots"]

[dev-dependencies]
tempfile = "3.10"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
postgres = { version = "0.19.12", features = ["with-chrono-0_4"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4"] }
port_check = "0.3.0"
